--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,27 +1,31 @@
 <div class="flex items-center justify-center min-h-screen bg-gradient-to-br from-gray-100 to-gray-200">
     <div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-md mx-4 border border-gray-100">
-        <form>
+        <form #f="ngForm" (ngSubmit)="logearse()">
             <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Iniciar Sesión</h2>
             <!-- Campo de correo -->
             <div class="mb-5">
                 <label for="email" class="block text-gray-700 font-semibold mb-2 text-sm">Correo Electrónico:</label>
-                <input type="email" id="email" name="email" required
+                <input 
+                    type="email" 
+                    id="email" 
+                    name="email" 
+                    required
+                    [(ngModel)]="loginDTO.email"
                     class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-200"
                     placeholder="Ingresa tu correo" />
             </div>
             <!-- Campo de contraseña -->
             <div class="mb-6">
                 <label for="password" class="block text-gray-700 font-semibold mb-2 text-sm">Contraseña:</label>
-                <input type="password" id="password" name="password" required minlength="7"
+                <input 
+                    type="password" 
+                    id="password" 
+                    name="password" 
+                    required
+                    [(ngModel)]="loginDTO.password" 
+                    minlength="7"
                     class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-200"
                     placeholder="Ingresa tu contraseña" />
-            </div>
-            <!-- Checkbox mantener sesión activa -->
-            <div class="mb-6 flex items-center">
-                <input type="checkbox" id="mantener-sesion"
-                    class="h-5 w-5 text-blue-600 focus:ring-blue-500 border-gray-300 rounded cursor-pointer" />
-                <label for="mantener-sesion" class="ml-3 text-gray-700 text-sm cursor-pointer">Mantener sesión
-                    activa</label>
             </div>
             <!-- Botón Iniciar Sesión -->
             <div class="mb-6">
