se crea el componente de examenes.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container mx-auto flex items-center justify-between px-4">
         <!-- Logo (siempre visible) -->
         <div class="flex items-center">
-            <a routerLink="" class="transition duration-300 hover:opacity-80 px-2">
+            <a routerLink="/inicio" class="transition duration-300 hover:opacity-80 px-2">
                 <svg viewBox="0 0 200 140" xmlns="http://www.w3.org/2000/svg" class="h-12 w-auto">
                     <rect x="10" y="10" width="180" height="100" rx="3" fill="#3b6e43" stroke="#2c4d30" stroke-width="3" />
                     <rect x="15" y="15" width="170" height="90" fill="#304d36" stroke="#243d29" stroke-width="1" />
